RealEstate Examples 3 corrections

--- a/MySQLPlayground/RealEstate/RealEstate_6.html
+++ b/MySQLPlayground/RealEstate/RealEstate_6.html
@@ -10,8 +10,8 @@
 </tr>
 
 <tr>
-<td class='normal' valign='top'>CÃ³rdoba</td>
-<td class='normal' valign='top'>100000.0</td>
+<td class='normal' valign='top'>Capital Federal</td>
+<td class='normal' valign='top'>500.0</td>
 </tr>
 </table>
 </body></html>
